<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modle.login.LoginActivity">

    <!--    <Button-->
    <!--        android:id="@+id/btn_verf"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginRight="30dp"-->
    <!--        android:gravity="center"-->
    <!--        android:singleLine="true"-->
    <!--        android:text="获取验证码"-->
    <!--        android:layout_marginTop="12dp"-->
    <!--        android:textColor="@android:color/holo_blue_bright"-->
    <!--        android:textSize="13sp"-->
    <!--        app:layout_constraintHorizontal_weight="1"-->
    <!--        app:layout_constraintLeft_toRightOf="@id/edit_verf"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/edit_number" />-->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn"
        android:text="@string/login"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_verf" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_btn"
        android:text="@string/regist"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_goneMarginTop="10dp" />

    <EditText
        android:id="@+id/edit_number"
        style="@style/editStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_edit_nickname"
        android:singleLine="true"
        android:textColorHint="@color/mainBottomTabTextGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_verf"
        style="@style/editStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_edit_psd"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColorHint="@color/mainBottomTabTextGray"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_number" />

    <include layout="@layout/toolbar_home" />
</androidx.constraintlayout.widget.ConstraintLayout>