<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/shape_mefragment_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/transparent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="35dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:singleLine="true"
                        android:text="wfc"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/accountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:singleLine="true"
                        android:text="@string/my_chat_account"
                        android:textColor="@color/gray2"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="66dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:singleLine="true"
                                android:text="@string/mine_attention"
                                android:textColor="#FFC1C0C9"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/followCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:singleLine="true"
                                android:text="0"
                                android:textColor="#FF262628"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:singleLine="true"
                                android:text="@string/mine_fans"
                                android:textColor="#FFC1C0C9"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/fansCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:singleLine="true"
                                android:text="0"
                                android:textColor="#FF262628"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.qiangdong.chat.widget.CircleImageView
            android:id="@+id/portraitImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_header" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="vertical">

            <cn.wildfire.chat.kit.widget.OptionItemView
                android:id="@+id/notificationOptionItemView"
                style="@style/OptionItem"
                android:background="@drawable/selector_common_item"
                app:start_src="@mipmap/icon_me_member"
                app:title="@string/mine_vip" />

            <cn.wildfire.chat.kit.widget.OptionItemView
                android:id="@+id/trendsOptionItemView"
                style="@style/OptionItem"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_common_item"
                app:start_src="@mipmap/icon_me_member"
                app:title="用户动态" />


            <cn.wildfire.chat.kit.widget.OptionItemView
                android:id="@+id/passwordOptionItemView"
                style="@style/OptionItem"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/selector_common_item"
                app:divider_align_to_title="true"
                app:start_src="@mipmap/icon_me_fans"
                app:title="@string/mine_fans_and_attention" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/settintOptionItemView"
            style="@style/OptionItem"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_common_item"
            android:clickable="true"
            app:divider_align_to_title="true"
            app:start_src="@mipmap/icon_me_setting"
            app:title="@string/setting" />
    </androidx.cardview.widget.CardView>


</LinearLayout>
</androidx.core.widget.NestedScrollView>